NO-TICKET add minor ui and copy improvements fix minor graphical glitch with text wrap when delete icon button shows

--- a/src/pages/todoPage/TodoItem/todoItem.module.scss
+++ b/src/pages/todoPage/TodoItem/todoItem.module.scss
@@ -26,4 +26,5 @@
 
 .deleteButtonContainer {
   margin-left: auto;
+  min-width: 37px;
 }
